--- a/impact.Rmd
+++ b/impact.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Projects
 
-### 30yr Medicare/PBS dataset re-identification
+### Reidentifying Medicare
 
 <!--Public domain image source: https://commons.wikimedia.org/wiki/File:Medicare_brand.svg-->
 <img src="images/medicare.png" style="width:150px; margin-right: 10px; margin-bottom: -10px" align="left"> 
@@ -28,13 +28,23 @@ With colleagues Teague and Culnane, I helped uncover one of the largest privacy 
 
 The day after Medicare's retraction, the Attorney General published a plan to [legislate against reidentification](https://www.attorneygeneral.gov.au/Mediareleases/Pages/2016/ThirdQuarter/Amendment-to-the-Privacy-Act-to-further-protect-de-identified-data.aspx) of Commonwealth datasets. In the months to come the _Reidentification Criminal Offence Bill_ (an amendment to the _Privacy Act 1988_) was introduced to Parliament criminalising the act of reidentification, unless [with](http://www.itnews.com.au/news/brandis-says-white-hats-will-be-exempt-from-data-law-changes-438496) [prior](http://www.canberratimes.com.au/national/public-service/government-appoints-information-watchdog-timothy-pilgrim-but-no-one-to-fill-top-privacy-foi-jobs-20160928-grqm9j.html) [permission](https://www.oaic.gov.au/media-and-speeches/statements/australian-privacy-commissioner-s-investigation-into-published-mbs-and-pbs-data-sets). The bill, if passed, would be retroactively applied and reverse the burden of proof on accused. While stifling security experts and journalists responsibly disclosing existing privacy breaches to the government, the bill would not prevent private corporations or foreign entities outside Australian jurisdiction from misusing Commonwealth data. Of 15 submissions to the ensuing Parliamentary Inquiry examining the appropriateness of the bill, 14 were against including the Law Council of Australia, Australian Bankers’ Association, and EFF.
 Our [submission to the inquiry](http://www.aph.gov.au/Parliamentary_Business/Committees/Senate/Legal_and_Constitutional_Affairs/PrivacyReidentification/Submissions) achieved significant impact, being directly quoted 9 times in the Senate Committee’s final report. 
-We wrote an [Op-Ed](http://www.smh.com.au/national/public-service/can-the-government-really-protect-your-privacy-when-it-deidentifies-public-data-20161204-gt3nny.html) in the Sydney Morning Herald clearly explaining [why](https://pursuit.unimelb.edu.au/articles/crime-and-privacy-in-open-data) criminalising reidentification would do more harm than good. Since then we have made several related submissions, including to the: [Data Sharing and Release Consultation 2018](https://www.pmc.gov.au/public-data/data-sharing-and-release-reforms/submissions) (file 20697), [Parliamentary Inquiry into the My Health Record System 2018](https://www.aph.gov.au/Parliamentary_Business/Committees/Senate/Community_Affairs/MyHealthRecordsystem/Submissions) (submission #59), [ACCC Consumer Data Right draft rules 2019](https://www.accc.gov.au/focus-areas/consumer-data-right-cdr-0/cdr-draft-rules-banking).
+We wrote an [Op-Ed](http://www.smh.com.au/national/public-service/can-the-government-really-protect-your-privacy-when-it-deidentifies-public-data-20161204-gt3nny.html) in the Sydney Morning Herald clearly explaining [why](https://pursuit.unimelb.edu.au/articles/crime-and-privacy-in-open-data) criminalising reidentification would do more harm than good.
 
-### Technical privacy assessments: ABS, ONS, Opal
+### Reidentifying Myki
+
+<img src="images/Myki_logo.gif" style="width:100px; margin-right: 10px;" align="left"> 
+Colleagues Culnane, Teague and I [demonstrated](https://arxiv.org/abs/1908.05004) a significant reidentification of public transport users, in a 2018 datathon dataset of fine-grained touch-on touch-off events on Victorian public transport (the Myki card). We were able to find ourselves, triangulate a colleague based on a single cotravelling event, and a State MP through linking with social media postings. The privacy breach was [significant](https://pursuit.unimelb.edu.au/articles/two-data-points-enough-to-spot-you-in-open-transport-records): it would be easy for stalkers to learn when children travel alone, where survivors of domestic abuse now live, etc. from the release. The Victorian privacy commissioner [OVIC’s investigation](https://ovic.vic.gov.au/mediarelease/information-commissioner-investigates-breach-of-myki-users-privacy/) found PTV had broken state laws.
+
+### Privacy assessments
 
 <img src="images/laplace.png" style="width:200px; margin-right: 10px;" align="left"> 
 
-Also with colleagues Culnane and Teague since 2016, I have contributed towards several technical privacy assessments of government data initiatives. Contracted by the [Australian Bureau of Statistics](http://www.abs.gov.au/) (ABS), we have [analysed the privacy](https://arxiv.org/abs/1802.07975) of several options for name encoding for private record linkage---as might be used for Australian Census data for example. For [Transport for NSW](https://www.transport.nsw.gov.au/), we have performed a technical [privacy assessment](https://arxiv.org/abs/1704.08547) of a Data61-processed dataset of Opal transport card bus, train, ferry touch ons/offs again under contract. The data has subsequently been published. We have also discovered vulnerabilities in the hashing methodology published by the [UK Office of National Statistics](https://www.ons.gov.uk/) in a third [privacy assessment](https://arxiv.org/abs/1712.00871) (explained [here](https://pursuit.unimelb.edu.au/articles/how-small-details-can-create-a-big-problem)). Common themes to this work are reflected in our 2018 [report](https://ovic.vic.gov.au/resource/protecting-unit-record-level-personal-information/) for the [Office of the Victorian Information Commissioner](https://www.cpdp.vic.gov.au).
+With colleagues Ohrimenko, Culnane, Teague, I have contributed towards several technical privacy assessments of government data initiatives and privacy sector projects. Contracted by the [Australian Bureau of Statistics](http://www.abs.gov.au/) (ABS), we have for example [analysed the privacy](https://arxiv.org/abs/1802.07975) of several options for name encoding for private record linkage---as might be used for Australian Census data for example. For [Transport for NSW](https://www.transport.nsw.gov.au/), we have performed a technical [privacy assessment](https://arxiv.org/abs/1704.08547) of a Data61-processed dataset of Opal transport card bus, train, ferry touch ons/offs again under contract. The data has subsequently been published. We have also discovered vulnerabilities in the hashing methodology published by the [UK Office of National Statistics](https://www.ons.gov.uk/) in a third [privacy assessment](https://arxiv.org/abs/1712.00871) (explained [here](https://pursuit.unimelb.edu.au/articles/how-small-details-can-create-a-big-problem)). These are non-exhaustive examples of technical assessments performed by the group. Common themes to this work are reflected in our 2018 [report](https://ovic.vic.gov.au/resource/protecting-unit-record-level-personal-information/) for the [Office of the Victorian Information Commissioner](https://www.cpdp.vic.gov.au). These and broader issues around robustness of AI are summarised in an [OVIC book chapter](https://ovic.vic.gov.au/closer-to-the-machine-ai-publication/).
+
+### COVIDSafe app privacy
+
+<img src="images/covidsafe-phone-image.jpg" style="width:200px; margin-right: 10px;" align="left"> 
+In 2020, the COVID-19 pandemic swept across the world with devistating consequences. An important strategy for slowing the spread of the coronavirus is contact tracing, which traditionally had been manual, laborious but accurate. Naturally many governments hoped that high uptake of Bluetooth-enabled smart phones could be leveraged for automated contact tracing, supporting over-burdened human contact traces if and when COVID-19 put strain on health systems. In March Australia opted to adopt and adapt Singapore's Bluetooth contact tracing system TraceTogether in its app called COVIDSafe. While the contact tracing [effectiveness](https://www.abc.net.au/news/2020-11-04/coronavirus-covidsafe-app-effectiveness-questioned-by-sa-police/12846556) [of](https://thenewdaily.com.au/news/coronavirus/2020/08/24/covid-safe-app-coronavirus/) [the](https://thenewdaily.com.au/news/national/2020/07/08/covidfail-app/) [system](https://www.innovationaus.com/time-for-a-covidsafe-review-edward-santow/) has since come in to focus, many tech commentators and researchers identified seemingly unnecessary compromise in the system's privacy provisions. I [reported of these privacy critiques](https://eng.unimelb.edu.au/ingenium/technology-and-society/on-the-privacy-of-tracetogether,-the-singaporean-covid-19-contact-tracing-mobile-app,-and-recommendations-for-australia) with colleagues Farokhi (Melbourne), Asghar and Kaafar (Macquarie), a report that was cited by the government's [COVIDSafe PIA](https://www.health.gov.au/sites/default/files/documents/2020/04/covidsafe-application-privacy-impact-assessment-covidsafe-application-privacy-impact-assessment.pdf). Like many other experts, we aimed to highlight the flexibility and greater privacy of decentralised approaches. With colleagues Leins and Culnane (Melbourne), we [wrote in the MJA](https://onlinelibrary.wiley.com/doi/full/10.5694/mja2.50669) on a broader range of issues on the techno-legal and ethical dilemma's for automated contact tracing. For more up to date detail on the COVIDSafe implementation interested readers should check out the thorough [posts by Vanessa et al.](https://github.com/vteague/contactTracing).
 
 ### Cheating at Kaggle
 
@@ -60,7 +70,7 @@ With a Berkeley group led by Dawn Song [[report](http://www.eecs.berkeley.edu/Pu
 
 Over 2010--13, I was one of two researchers and a small handful of developers, building a production system for data integration---an application of machine learning in databases that leveraged our research at Microsoft e.g., [[VLDB'12](http://vldb.org/pvldb/vol5/p550_bozhao_vldb2012.pdf)]. The system shipped multiple times internally (resulting in 4x ShipIt! awards for sustained product transfer). Notable applications were to the Bing Search engine across multiple verticals, and the Xbox game console. After the 2011/12 refresh, in which our data integration was a key contribution from Research, Xbox revenue increased by several $100m (due to [increased](http://allthingsd.com/20120510/microsofts-sneaky-success-the-xbox-is-the-most-popular-video-player-in-the-u-s/) [sales](http://allthingsd.com/20120327/xbox-users-clocking-more-hours-gobbling-media-than-gaming-online/) of consoles and Xbox Live subscriptions). Within Microsoft Research, this impact was [attributed](http://www.bing.com/community/site_blogs/b/search/archive/2011/12/08/bing-on-xbox-team-don-t-be-shy-about-talking-to-the-tv.aspx) to our small team. In Bing’s social vertical, our system matched over 1b records daily. I continue to work on data integration at Melbourne.
 
-### Predicting transplant failure
+### Transplant failures
 
 <!--Public domain image source: https://commons.wikimedia.org/wiki/File:Liver.svg-->
 <img src="images/liver.png" style="width:120px; margin-right: 10px; margin-bottom: -10px" align="left"> 
@@ -76,7 +86,7 @@ Through 2016 my group with colleague Bailey collaborated with the Austin Hospita
 [SBS News](https://www.sbs.com.au/news/the-feed/privacy-experts-are-concerned-about-the-government-s-coronavirus-tracing-app-here-s-why),
 [Gizmodo](https://www.gizmodo.com.au/2020/04/coronavirus-tracing-app-australia-source-code/),
 [ACS InformationAge](https://ia.acs.org.au/article/2020/apple-and-google-join-forces-to-fight-covid-19.html)
-* 2019 (1m+ views), Reidentification of the Myki transport data release: named a *top-10 story of 2019* by [ComputerWeekly](https://www.computerweekly.com/news/252475676/Top-10-Australia-IT-stories-of-2019), 
+* 2019 (1m+ views), Reidentification of the Myki transport data release: named a *top-2 story of 2019* by [ComputerWeekly](https://www.computerweekly.com/news/252475676/Top-10-Australia-IT-stories-of-2019), 
 [Australian Financial Review](https://www.afr.com/technology/myki-data-release-found-to-have-breached-privacy-laws-20190815-p52hbo#:~:text=Public%20Transport%20Victoria%20could%20be,and%20their%20travel%20patterns%20discoverable.), 
 [3AW radio](https://www.3aw.com.au/private-myki-data-released-unlawfully-to-the-public/#:~:text=The%20data%20of%20more%20than,to%20a%20%E2%80%9Cdatathon%E2%80%9D%20event.), 
 [ABC Online](https://www.abc.net.au/news/2019-08-15/myki-data-spill-breaches-privacy-for-millions-of-users/11416616), 
@@ -161,6 +171,8 @@ for (i in seq(from=1,to=nrow(SUBS))) {
   cat(", ", SUBS[i,"Date"], ".", sep="")
 }
 ```
+
+Further submissions: [Data Sharing and Release Consultation 2018](https://www.pmc.gov.au/public-data/data-sharing-and-release-reforms/submissions) (file 20697), [Parliamentary Inquiry into the My Health Record System 2018](https://www.aph.gov.au/Parliamentary_Business/Committees/Senate/Community_Affairs/MyHealthRecordsystem/Submissions) (submission #59), [ACCC Consumer Data Right draft rules 2019](https://www.accc.gov.au/focus-areas/consumer-data-right-cdr-0/cdr-draft-rules-banking).
 
 As member of the Australian Academy of Science's [National Committee for Information and Communication Sciences](https://www.science.org.au/supporting-science/national-committees-science/national-committee-information-and-communication) I contributed to the [Digital Futures strategic plan](https://www.science.org.au/support/analysis/decadal-plans/ics/preparing-australias-digital-future).
 
