--- a/software.Rmd
+++ b/software.Rmd
@@ -5,7 +5,7 @@
 
 <br>
 
-My [group](group.html) and I have implemented our research contributions as useful software artifacts---in many cases as open-source software on which  collaboration and contributions are most welcome. Other software has [shipped](impact.html) within larger systems.
+My [group](group.html) and I have implemented our research contributions as useful software artifacts---in many cases as open-source software on which  collaboration and contributions are most welcome. Other software has [shipped](impact.html#microsoft_data_linking) within larger systems.
 
 ***
 
