--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -963,48 +963,8 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note = {arXiv:2011.02142 [cs.CR]},
   year={2020},
   month={Nov},
-  presort={03},
-  rmdnote={pdf=https://arxiv.org/abs/2011.02142}
-}
-
-@misc{marchant2020a,
-  title={A general framework for label-efficient online evaluation with asymptotic guarantees},
-  author={Neil G. Marchant and Benjamin I. P. Rubinstein},
-  note = {arXiv:2006.06963 [cs.LG]},
-  year={2020},
-  month={Jun},
   presort={04},
-  rmdnote={pdf=https://arxiv.org/abs/2006.06963}
-}
-
-@misc{xu2020a,
-  title={Targeted Poisoning Attacks on Black-Box Neural Machine Translation},
-  author={Chang Xu and Jun Wang and Yuqing Tang and Francisco Guzman and Benjamin I. P. Rubinstein and Trevor Cohn},
-  note = {arXiv:2011.00675 [cs.CL]},
-  year={2020},
-  month={Oct},
-  presort={05},
-  rmdnote={pdf=https://arxiv.org/abs/2011.00675}
-}
-
-@misc{perera2020,
-  title={{DBA} bandits: Self-driving index tuning under ad-hoc, analytical workloads with safety guarantees},
-  author={R. Malinga Perera and Bastian Oetomo and Benjamin I. P. Rubinstein and Renata Borovica-Gajic},
-  note = {arXiv:2010.09208 [cs.DB]},
-  year={2020},
-  month={Oct},
-  presort={06},
-  rmdnote={pdf=https://arxiv.org/abs/2010.09208}
-}
-
-@misc{edwards2020a,
-  title={A Graph Symmetrisation Bound on Channel Information Leakage under Blowfish Privacy},
-  author={Tobias Edwards and Benjamin I. P. Rubinstein and Zuhe Zhang and Sanming Zhou},
-  note = {arXiv:2007.05975 [cs.IT]},
-  year={2020},
-  month={Jul},
-  presort={07},
-  rmdnote={pdf=https://arxiv.org/abs/2007.05975}
+  rmdnote={pdf=https://arxiv.org/abs/2011.02142}
 }
 
 @article{Zhou2020early,
@@ -1015,8 +975,48 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   volume={14},
   number={2},
   pages={977-992},
-  presort={08},
+  presort={03},
   rmdnote={pub=http://dx.doi.org/10.1214/20-AOAS1326}
+}
+
+@misc{marchant2020a,
+  title={A general framework for label-efficient online evaluation with asymptotic guarantees},
+  author={Neil G. Marchant and Benjamin I. P. Rubinstein},
+  note = {arXiv:2006.06963 [cs.LG]},
+  year={2020},
+  month={Jun},
+  presort={05},
+  rmdnote={pdf=https://arxiv.org/abs/2006.06963}
+}
+
+@misc{xu2020a,
+  title={Targeted Poisoning Attacks on Black-Box Neural Machine Translation},
+  author={Chang Xu and Jun Wang and Yuqing Tang and Francisco Guzman and Benjamin I. P. Rubinstein and Trevor Cohn},
+  note = {arXiv:2011.00675 [cs.CL]},
+  year={2020},
+  month={Oct},
+  presort={06},
+  rmdnote={pdf=https://arxiv.org/abs/2011.00675}
+}
+
+@misc{perera2020,
+  title={{DBA} bandits: Self-driving index tuning under ad-hoc, analytical workloads with safety guarantees},
+  author={R. Malinga Perera and Bastian Oetomo and Benjamin I. P. Rubinstein and Renata Borovica-Gajic},
+  note = {arXiv:2010.09208 [cs.DB]},
+  year={2020},
+  month={Oct},
+  presort={07},
+  rmdnote={pdf=https://arxiv.org/abs/2010.09208}
+}
+
+@misc{edwards2020a,
+  title={A Graph Symmetrisation Bound on Channel Information Leakage under Blowfish Privacy},
+  author={Tobias Edwards and Benjamin I. P. Rubinstein and Zuhe Zhang and Sanming Zhou},
+  note = {arXiv:2007.05975 [cs.IT]},
+  year={2020},
+  month={Jul},
+  presort={08},
+  rmdnote={pdf=https://arxiv.org/abs/2007.05975}
 }
 
 @inproceedings{liu2020legionb,
@@ -1086,22 +1086,23 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   rmdnote={full=https://arxiv.org/abs/1902.09062;pub=https://ieeexplore.ieee.org/abstract/document/9206634}
 }
 
-@misc{zhang2020improving,
-  title={Improving Interpretability of {CNN} Models Using Non-Negative Concept Activation Vectors},
-  author={Zhang, Ruihan and Madumal, Prashan and Miller, Tim and Ehinger, Kris and Rubinstein, Benjamin},
-  note = {arXiv:2006.15417 [cs.CV]},
-  year={2020},
-  month={Jun},
-  presort={15},
-  rmdnote={pdf=https://arxiv.org/abs/2006.15417}
-}
-
 @misc{gelbhart2020discrete,
   title={Discrete Few-Shot Learning for Pan Privacy},
   author={Roei Gelbhart and Benjamin I. P. Rubinstein},
   note = {arXiv:2006.13120 [cs.LG]},
   year={2020},
   month={Jun},
-  presort={16},
+  presort={15},
   rmdnote={pdf=https://arxiv.org/abs/2006.13120}
+}
+
+@inproceedings{zhang2021improving,
+  title={Improving Interpretability of {CNN} Models Using Non-Negative Concept Activation Vectors},
+  author={Zhang, Ruihan and Madumal, Prashan and Miller, Tim and Ehinger, Kris and Rubinstein, Benjamin},
+  booktitle={Proceedings of the 35th AAAI Conference on Artificial Intelligence},
+  series={AAAI},
+  year={2021},
+  note={Accepted},
+  presort={01},
+  rmdnote={full=https://arxiv.org/abs/2006.15417}
 }
