--- a/group.Rmd
+++ b/group.Rmd
@@ -22,13 +22,13 @@ I am fortunate to supervise a brilliant group of researchers.
 * Ruihan Zhang (w Tim Miller, Kris Ehinger 2019-- ). Explainable AI and machine learning.
 * [Malinga Perera](http://www.malinga.me/) (w Renata Borovica-Gajic 2018-- ). Self-driving databases.
 * [Bastian Oetomo](https://www.linkedin.com/in/bastian-oetomo-34300856/) (w Renata Borovica-Gajic 2018-- ). Self-driving databases.
-* [Dongge Liu](https://www.linkedin.com/in/dongge-liu-9a957913a) (w Toby Murray, Gidon Ernst at LMU Munich 2018-- ). Software fuzzing with machine learning.
+* [Dongge Liu](https://www.linkedin.com/in/dongge-liu-9a957913a) (w Toby Murray, Thuan Pham, Gidon Ernst at LMU Munich 2018-- ). Software fuzzing with machine learning.
 * [Neil Marchant](https://www.linkedin.com/in/neil-marchant-466678aa/) (w Beka Steorts at Duke, Aurore Delaigle 2016-- ). Record linkage, adaptive importance sampling.
 
 ### PhD students---Completed
 
 * [Leyla Roohi](https://au.linkedin.com/in/leyla-roohi-b4544a67) (w Vanessa Teague 2017--19). Secure storage and private querying for telecommunications metadata → Postdoc at Univ Melbourne
-* Yuan Li (w Trevor Cohn 2015--19). Crowd sourcing, Bayesian optimisation, NLP → Postdoc at Univ Melbourne
+* [Yuan Li](https://scholar.google.com/citations?user=qDDC09EAAAAJ&hl=en) (w Trevor Cohn 2015--19). Crowd sourcing, Bayesian optimisation, NLP → Postdoc at Univ Melbourne
 * [Lingjuan Lyu](https://www.researchgate.net/profile/Lingjuan_Lyu) (w Marimuthu Palaniswami 2016--18). Privacy in distributed sensing → Postdoc at the ANU
 * [Safiollah Heidari](https://sites.google.com/site/safiheidari/) (w Raj Buyya 2015--18). Distributed graph processing → Founder, NeuroPhyte
 * [Xunyun Liu](https://xunyunliu.github.io/) (w Raj Buyya, Rodrigo Calheiros 2015--18). Stream computing → Assistant Prof at NUDT
