--- a/impact.Rmd
+++ b/impact.Rmd
@@ -255,6 +255,7 @@ for (i in seq(from=1,to=nrow(FT))) {
 ### Institutional
 
 * Associate Dean Research (2020), Melbourne School of Engineering
+* Co-lead (2021--), AI Group, School of Computing and Information Systems
 * Member (2019--), School Executive, School of Computing and Information Systems
 * Member (2019--) and Chair (2020), Awards and Prizes Working Group, Melbourne School of Engineering
 * Investigator (2000--), Melbourne Centre for Data Science (MCDS)
