www21 and shijie

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -989,23 +989,13 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   rmdnote={pdf=https://arxiv.org/abs/2006.06963}
 }
 
-@misc{xu2020a,
-  title={Targeted Poisoning Attacks on Black-Box Neural Machine Translation},
-  author={Chang Xu and Jun Wang and Yuqing Tang and Francisco Guzman and Benjamin I. P. Rubinstein and Trevor Cohn},
-  note = {arXiv:2011.00675 [cs.CL]},
-  year={2020},
-  month={Oct},
-  presort={06},
-  rmdnote={pdf=https://arxiv.org/abs/2011.00675}
-}
-
 @misc{perera2020,
   title={{DBA} bandits: Self-driving index tuning under ad-hoc, analytical workloads with safety guarantees},
   author={R. Malinga Perera and Bastian Oetomo and Benjamin I. P. Rubinstein and Renata Borovica-Gajic},
   note = {arXiv:2010.09208 [cs.DB]},
   year={2020},
   month={Oct},
-  presort={07},
+  presort={06},
   rmdnote={pdf=https://arxiv.org/abs/2010.09208}
 }
 
@@ -1015,7 +1005,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note = {arXiv:2007.05975 [cs.IT]},
   year={2020},
   month={Jul},
-  presort={08},
+  presort={07},
   rmdnote={pdf=https://arxiv.org/abs/2007.05975}
 }
 
@@ -1025,7 +1015,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   author={Liu, Dongge and Ernst, Gidon and Murray, Toby and Rubinstein, Benjamin I. P.},
   booktitle={The 35th IEEE/ACM International Conference on Automated Software Engineering},
   series={ASE},
-  presort={09},
+  presort={08},
   note={Accepted},
   rmdnote={code=https://github.com/Alan32Liu/Legion;pdf=https://arxiv.org/abs/2002.06311}
 }
@@ -1038,7 +1028,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   series={FASE},
   note={Test-Comp session},
   pages={545--549},
-  presort={10},
+  presort={09},
   rmdnote={code=https://github.com/Alan32Liu/Legion;pub=https://link.springer.com/chapter/10.1007/978-3-030-45234-6_31}
 }
 
@@ -1050,7 +1040,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={Databases Theory and Applications},
   series={ADC},
   note={31st Australasian Database Conference},
-  presort={11},
+  presort={10},
   pages={68--80},
   rmdnote={pub=https://link.springer.com/book/10.1007/978-3-030-39469-1;alert=Best Student Paper Honorable Mention}
 }
@@ -1060,7 +1050,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   year={2020},
   author={Yang, Zhuolin and Li, Linyi and Xu, Xiaojun and Zuo, Shiliang and Chen, Qian and Rubinstein, Benjamin and Zhang, Ce and Li, Bo},
   note={Pre-print presented at ICML'2020 Workshop on Uncertainty \& Robustness in Deep Learning},
-  presort={12},
+  presort={11},
   rmdnote={pdf=http://www.gatsby.ucl.ac.uk/~balaji/udl2020/accepted-papers/UDL2020-paper-071.pdf}
 }
 
@@ -1071,7 +1061,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={24th Pacific-Asia Conference on Knowledge Discovery and Data Mining},
   series={PAKDD},
   pages={152--163},
-  presort={13},
+  presort={12},
   rmdnote={full=https://arxiv.org/abs/2005.13787;pub=https://doi.org/10.1007/978-3-030-47436-2_12}
 }
 
@@ -1082,7 +1072,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={2020 International Joint Conference on Neural Networks},
   series={IJCNN},
   pages={1--8},
-  presort={14},
+  presort={13},
   rmdnote={full=https://arxiv.org/abs/1902.09062;pub=https://ieeexplore.ieee.org/abstract/document/9206634}
 }
 
@@ -1092,8 +1082,19 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note = {arXiv:2006.13120 [cs.LG]},
   year={2020},
   month={Jun},
-  presort={15},
+  presort={14},
   rmdnote={pdf=https://arxiv.org/abs/2006.13120}
+}
+
+@inproceedings{xu2021a,
+  title={A Targeted Attack on Black-Box Neural Machine Translation with Parallel Data Poisoning},
+  author={Chang Xu and Jun Wang and Yuqing Tang and Francisco Guzman and Benjamin I. P. Rubinstein and Trevor Cohn},
+  booktitle={Proceedings of the 2021 World Wide Web Conferece},
+  series={WWW},
+  note={Accepted},
+  year={2021},
+  presort={01},
+  rmdnote={pdf=https://arxiv.org/abs/2011.00675}
 }
 
 @inproceedings{zhang2021improving,
@@ -1103,6 +1104,6 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   series={AAAI},
   year={2021},
   note={Accepted},
-  presort={01},
+  presort={02},
   rmdnote={full=https://arxiv.org/abs/2006.15417}
 }
